archive/manifests/03-configmaps.yaml
---
# Namespace for the application
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    name: app
    environment: preprod
